--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,94 @@
-name: sptmp3
-channels:
-  - conda-forge
-  - menpo
-  - defaults
-dependencies:
-  - brotlipy=0.7.0=py38h294d835_1004
-  - bzip2=1.0.8=h8ffe710_4
-  - ca-certificates=2022.5.18.1=h5b45459_0
-  - certifi=2022.5.18.1=py38haa244fe_0
-  - cffi=1.15.0=py38hd8c33c5_0
-  - charset-normalizer=2.0.12=pyhd8ed1ab_0
-  - click=8.1.3=py38haa244fe_0
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - cryptography=37.0.1=py38h21b164f_0
-  - flask=2.1.2=pyhd8ed1ab_1
-  - idna=3.3=pyhd8ed1ab_0
-  - importlib-metadata=4.11.4=py38haa244fe_0
-  - itsdangerous=2.1.2=pyhd8ed1ab_0
-  - jinja2=3.1.2=pyhd8ed1ab_0
-  - libffi=3.4.2=h8ffe710_5
-  - libzlib=1.2.12=h8ffe710_0
-  - markupsafe=2.1.1=py38h294d835_1
-  - openssl=3.0.3=h8ffe710_0
-  - pip=22.1.2=pyhd8ed1ab_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pysocks=1.7.1=py38haa244fe_5
-  - python=3.8.13=hcf16a7b_0_cpython
-  - python_abi=3.8=2_cp38
-  - requests=2.27.1=pyhd8ed1ab_0
-  - setuptools=62.3.2=py38haa244fe_0
-  - six=1.16.0=pyh6c4a22f_0
-  - spotipy=2.19.0=pyhd8ed1ab_0
-  - sqlite=3.38.5=h8ffe710_0
-  - tk=8.6.12=h8ffe710_0
-  - ucrt=10.0.20348.0=h57928b3_0
-  - urllib3=1.26.9=pyhd8ed1ab_0
-  - vc=14.2=hb210afc_6
-  - vs2015_runtime=14.29.30037=h902a5da_6
-  - werkzeug=2.1.2=pyhd8ed1ab_1
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - win_inet_pton=1.1.0=py38haa244fe_4
-  - xz=5.2.5=h62dcd97_1
-  - zipp=3.8.0=pyhd8ed1ab_0
-  - pip:
-    - anyio==3.6.1
-    - attrs==21.4.0
-    - beautifulsoup4==4.11.1
-    - bleach==5.0.0
-    - defusedxml==0.7.1
-    - entrypoints==0.4
-    - fastjsonschema==2.15.3
-    - gunicorn==20.1.0
-    - h11==0.12.0
-    - httpcore==0.15.0
-    - httpx==0.23.0
-    - importlib-resources==5.7.1
-    - jsonschema==4.6.0
-    - jupyter-client==7.3.1
-    - jupyter-core==4.10.0
-    - jupyterlab-pygments==0.2.2
-    - mistune==0.8.4
-    - nbclient==0.6.4
-    - nbformat==5.4.0
-    - nest-asyncio==1.5.5
-    - packaging==21.3
-    - pandas==1.4.2
-    - pandocfilters==1.5.0
-    - pygments==2.12.0
-    - pyparsing==3.0.9
-    - pyrsistent==0.18.1
-    - python-dateutil==2.8.2
-    - pytz==2022.1
-    - pywin32==304
-    - pyzmq==23.1.0
-    - rfc3986==1.5.0
-    - sniffio==1.2.0
-    - soupsieve==2.3.2.post1
-    - tinycss2==1.1.1
-    - tornado==6.1
-    - traitlets==5.2.2.post1
-    - webencodings==0.5.1
-    - youtube-dl==2021.12.17
-    - youtube-search-python==1.6.5
-prefix: C:\ProgramData\Anaconda3\envs\sptmp3
+absl-py==0.10.0
+anyio==3.6.1
+appdirs==1.4.4
+astroid==2.4.2
+astunparse==1.6.3
+attrs==21.4.0
+beautifulsoup4==4.11.1
+black==21.5b0
+bleach==5.0.0
+brotlipy @ file:///D:/bld/brotlipy_1648854320485/work
+cachetools==4.1.1
+certifi==2020.6.20
+cffi @ file:///D:/bld/cffi_1636046293990/work
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1644853463426/work
+click==7.1.2
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
+cryptography @ file:///C:/ci/cryptography_1652101772384/work
+defusedxml==0.7.1
+entrypoints==0.4
+fastjsonschema==2.15.3
+Flask @ file:///home/conda/feedstock_root/build_artifacts/flask_1651670959703/work
+gast==0.3.3
+google-auth==1.21.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.31.0
+gunicorn==20.1.0
+h11==0.12.0
+h5py==2.10.0
+httpcore==0.15.0
+httpx==0.23.0
+idna==2.10
+importlib-metadata @ file:///D:/bld/importlib-metadata_1653252985644/work
+importlib-resources==5.7.1
+isort==5.5.1
+itsdangerous @ file:///home/conda/feedstock_root/build_artifacts/itsdangerous_1648147185463/work
+Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1651774399431/work
+jsonschema==4.6.0
+jupyter-client==7.3.1
+jupyter-core==4.10.0
+jupyterlab-pygments==0.2.2
+Keras-Preprocessing==1.1.2
+lazy-object-proxy==1.4.3
+Markdown==3.2.2
+MarkupSafe @ file:///D:/bld/markupsafe_1648737751065/work
+mccabe==0.6.1
+mistune==0.8.4
+mypy-extensions==0.4.3
+nbclient==0.6.4
+nbformat==5.4.0
+nest-asyncio==1.5.5
+numpy==1.18.5
+oauthlib==3.1.0
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.4.2
+pandocfilters==1.5.0
+pathspec==0.8.1
+protobuf==3.13.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
+Pygments==2.12.0
+pylint==2.6.0
+pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1643496850550/work
+pyparsing==3.0.9
+pyrsistent==0.18.1
+PySocks @ file:///D:/bld/pysocks_1648857453381/work
+python-dateutil==2.8.2
+pytz==2022.1
+pywin32==304
+pyzmq==23.1.0
+regex==2021.4.4
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1641580202195/work
+requests-oauthlib==1.3.0
+rfc3986==1.5.0
+rsa==4.6
+six==1.15.0
+sniffio==1.2.0
+soupsieve==2.3.2.post1
+spotipy @ file:///home/conda/feedstock_root/build_artifacts/spotipy_1631215603968/work
+termcolor==1.1.0
+tinycss2==1.1.1
+toml==0.10.1
+tornado==6.1
+traitlets==5.2.2.post1
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1647489083693/work
+webencodings==0.5.1
+Werkzeug==1.0.1
+win-inet-pton @ file:///D:/bld/win_inet_pton_1648771891747/work
+wrapt==1.12.1
+youtube-dl==2021.12.17
+youtube-search-python==1.6.5
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1649012893348/work
