--- a/requirements.txt
+++ b/requirements.txt
@@ -7,18 +7,18 @@ attrs==21.4.0
 beautifulsoup4==4.11.1
 black==21.5b0
 bleach==5.0.0
-brotlipy @ file:///D:/bld/brotlipy_1648854320485/work
+brotlipy==0.7.0
 cachetools==4.1.1
 certifi==2020.6.20
-cffi @ file:///D:/bld/cffi_1636046293990/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1644853463426/work
+cffi==1.15.0
+charset-normalizer==2.0.12
 click==7.1.2
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
-cryptography @ file:///C:/ci/cryptography_1652101772384/work
+colorama==0.4.4
+cryptography==37.01.1
 defusedxml==0.7.1
 entrypoints==0.4
 fastjsonschema==2.15.3
-Flask @ file:///home/conda/feedstock_root/build_artifacts/flask_1651670959703/work
+Flask==2.1.2
 gast==0.3.3
 google-auth==1.21.0
 google-auth-oauthlib==0.4.1
@@ -30,11 +30,11 @@ h5py==2.10.0
 httpcore==0.15.0
 httpx==0.23.0
 idna==2.10
-importlib-metadata @ file:///D:/bld/importlib-metadata_1653252985644/work
+importlib-metadata==4.11.4
 importlib-resources==5.7.1
 isort==5.5.1
-itsdangerous @ file:///home/conda/feedstock_root/build_artifacts/itsdangerous_1648147185463/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1651774399431/work
+itsdangerous==2.1.2
+Jinja2==3.1.2
 jsonschema==4.6.0
 jupyter-client==7.3.1
 jupyter-core==4.10.0
@@ -42,7 +42,7 @@ jupyterlab-pygments==0.2.2
 Keras-Preprocessing==1.1.2
 lazy-object-proxy==1.4.3
 Markdown==3.2.2
-MarkupSafe @ file:///D:/bld/markupsafe_1648737751065/work
+MarkupSafe==2.1.1
 mccabe==0.6.1
 mistune==0.8.4
 mypy-extensions==0.4.3
@@ -59,36 +59,35 @@ pathspec==0.8.1
 protobuf==3.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
+pycparser==2.21
 Pygments==2.12.0
 pylint==2.6.0
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1643496850550/work
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
-PySocks @ file:///D:/bld/pysocks_1648857453381/work
+PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.1
 pywin32==304
 pyzmq==23.1.0
 regex==2021.4.4
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1641580202195/work
+requests==2.27.1
 requests-oauthlib==1.3.0
 rfc3986==1.5.0
 rsa==4.6
 six==1.15.0
 sniffio==1.2.0
 soupsieve==2.3.2.post1
-spotipy @ file:///home/conda/feedstock_root/build_artifacts/spotipy_1631215603968/work
+spotipy==2.19.0
 termcolor==1.1.0
 tinycss2==1.1.1
 toml==0.10.1
 tornado==6.1
 traitlets==5.2.2.post1
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1647489083693/work
+urllib3==1.26.9
 webencodings==0.5.1
 Werkzeug==1.0.1
-win-inet-pton @ file:///D:/bld/win_inet_pton_1648771891747/work
 wrapt==1.12.1
 youtube-dl==2021.12.17
 youtube-search-python==1.6.5
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1649012893348/work
+
