--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ cryptography==37.0.1
 defusedxml==0.7.1
 entrypoints==0.4
 fastjsonschema==2.15.3
+ffmpeg
+ffmpeg-python
 Flask==2.1.2
 gast==0.3.3
 google-auth==1.21.0
