--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ toml==0.10.1
 tornado==6.1
 traitlets==5.2.2.post1
 urllib3==1.26.9
+waitress==2.1.2
 webencodings==0.5.1
 wrapt==1.12.1
 youtube-dl==2021.12.17
