--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,7 @@
-absl-py==0.10.0
-anyio==3.6.1
-appdirs==1.4.4
-astroid==2.4.2
-astunparse==1.6.3
-attrs==21.4.0
-beautifulsoup4==4.11.1
-bleach==5.0.0
-brotlipy==0.7.0
-cachetools==4.1.1
-certifi==2020.6.20
-cffi==1.15.0
-charset-normalizer==2.0.12
-colorama==0.4.4
-cryptography==37.0.1
-defusedxml==0.7.1
-entrypoints==0.4
-fastjsonschema==2.15.3
-ffmpeg
-ffmpeg-python
-Flask==2.1.2
-gast==0.3.3
-google-auth==1.21.0
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-grpcio==1.31.0
-gunicorn==20.1.0
-h11==0.12.0
-h5py==2.10.0
-httpcore==0.15.0
-httpx==0.23.0
-idna==2.10
-importlib-metadata==4.11.4
-importlib-resources==5.7.1
-isort==5.5.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jsonschema==4.6.0
-jupyter-client==7.3.1
-jupyter-core==4.10.0
-jupyterlab-pygments==0.2.2
-Keras-Preprocessing==1.1.2
-lazy-object-proxy==1.4.3
-Markdown==3.2.2
-MarkupSafe==2.1.1
-mccabe==0.6.1
-mistune==0.8.4
-mypy-extensions==0.4.3
-nbclient==0.6.4
-nbformat==5.4.0
-nest-asyncio==1.5.5
-numpy==1.18.5
-oauthlib==3.1.0
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.4.2
-pandocfilters==1.5.0
-pathspec==0.8.1
-protobuf==3.13.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-Pygments==2.12.0
-pylint==2.6.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-pyrsistent==0.18.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-pytz==2022.1
-pyzmq==23.1.0
-regex==2021.4.4
-requests==2.27.1
-requests-oauthlib==1.3.0
-rfc3986==1.5.0
-rsa==4.6
-six==1.15.0
-sniffio==1.2.0
-soupsieve==2.3.2.post1
-spotipy==2.19.0
-termcolor==1.1.0
-tinycss2==1.1.1
-toml==0.10.1
-tornado==6.1
-traitlets==5.2.2.post1
-urllib3==1.26.9
+Flask==2.1.3
+pandas==1.4.3
+python-dotenv==1.0.0
+spotipy==2.22.0
 waitress==2.1.2
-webencodings==0.5.1
-wrapt==1.12.1
-youtube-dl==2021.12.17
-youtube-search-python==1.6.5
-
+youtube_search_python==1.6.6
+yt_dlp==2023.11.16
